# GUBAS-RS

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  help.html  hou_shell_cfg.py  index.html  initialize.py  paper.bib  paper.md  pytest.ini  requirements.txt  settings.html  src-files.js
gubas_rs/: Cargo.toml  all.html  fn.ic_read.html  fn.run_simulation.html  fn.run_stm.html  fn.run_stm_augmented.html  fn.run_stm_augmented_both.html  index.html  pyproject.toml
gubas_rs/coefficients/: fn.a_calc.html  fn.b_calc.html  fn.coeff_vec_len.html  fn.factorial.html  fn.ifact.html  fn.t_ind.html  fn.tk_calc.html  index.html
gubas_rs/dual/: index.html  struct.Dual.html
gubas_rs/dynamics/: fn.hou_ode.html  index.html  sidebar-items.js
gubas_rs/inertia/: fn.dt_dc.html  fn.ell_mass_params_met.html  fn.inertia_rot.html  fn.load_moi_csv.html  fn.poly_inertia.html  fn.poly_inertia_met.html  fn.poly_moi.html  fn.poly_moi_met.html  fn.q_ijk.html  fn.save_moi_csv.html  fn.tet_sums.html  index.html
gubas_rs/integrators/: fn.abm.html  fn.lgvi_integ.html  fn.rk4_stack.html  fn.rk87.html  index.html
gubas_rs/lgvi/: fn.hamiltonian_map.html  fn.map_potential_partials_lgvi.html  index.html
gubas_rs/math3/: constant.IDENTITY.html  constant.ZERO_M.html  constant.ZERO_V.html  fn.add_m.html  fn.add_v.html  fn.col.html  fn.cross.html  fn.det3.html  fn.diag.html  fn.dot.html  fn.eye.html  fn.frob_norm.html  fn.inf_norm_30.html  fn.inf_norm_v.html  fn.inv3.html  fn.mat_mul.html  fn.mat_vec.html  fn.norm.html  fn.scale_m.html  fn.scale_v.html  fn.state_add_scaled.html  fn.state_combine.html  (+13 more)
(+160 files in other folders)
